setting weather icons and app basic framework

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,3 +1,10 @@
 .App {
   text-align: center;
+  min-height: 100vh;
 }
+.App .bd-navbar {
+  padding: 0.75rem 0;
+  background-color: #7952b3;
+}
+
+/*# sourceMappingURL=App.css.map */
